vlib/v/checker/tests/add_op_wrong_left_type_err_c.out
vlib/v/checker/tests/add_op_wrong_left_type_err_c.v:3:5: error: mismatched types `map_string_int` and `any_int` 
    1 | fn main() {
    2 |     a := map[string]int
    3 |     a + 10
      |     ^
    4 | }
